feature_dodo: show deliveries in payments

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -515,24 +515,24 @@
 	<string name="enter_some_amount">कृपया कुछ राशि दर्ज करें</string>
 	<string name="enter_less_amount">कृपया कम राशि प्रवेश करें</string>
 	<string name="enter_valid_amount">कृपया वैध राशि दर्ज करें</string>
-	<string name="amnt_credited">Amount Credited</string>
+	<string name="amnt_credited">राशि जमा की गयी </string>
 	<string name="JUGNOO">JUGNOO</string>
 	<string name="ride_complete">सवारी पूरा</string>
 	<string name="no_not_verified">Phone Number not verified</string>
 	<string name="resend_OTP">ओटीपी पुन: भेजें</string>
-	<string name="return_reasons">Reasons of Return</string>
-	<string name="collected">Collected</string>
-	<string name="Returned">Returned</string>
-	<string name="please_confirm_cash_taken">Please confirm you have taken cash</string>
-	<string name="confirm">Confirm</string>
-	<string name="start_delivery">Start Delivery</string>
-	<string name="deliveries">Deliveries</string>
-	<string name="pending">Pending</string>
-	<string name="cancelled">Cancelled</string>
-	<string name="current">Current</string>
+	<string name="return_reasons">वापसी का कारण</string>
+	<string name="collected">इकट्ठा किया </string>
+	<string name="Returned">वापसी</string>
+	<string name="please_confirm_cash_taken">कृपया पुष्टि करें कि आपने नकदी ले लिया है</string>
+	<string name="confirm">पुष्टि करें</string>
+	<string name="start_delivery">वितरण शुरू</string>
+	<string name="deliveries">वितरण</string>
+	<string name="pending">रूका हुआ</string>
+	<string name="cancelled">रद्द</string>
+	<string name="current">वर्तमान</string>
 	<string name="to_no_colon">To</string>
 	<string name="address">Address</string>
-	<string name="get_directions">Get Directions</string>
+	<string name="get_directions">दिशा - निर्देश प्राप्त करें</string>
 	<string name="delivered">Delivered</string>
 	<string name="delivery_on">Delivery ON</string>
 	<string name="delivery_is_over">Delivery is Over</string>
@@ -546,10 +546,12 @@
 	<string name="deliver_order_number">Deliver order no. %s</string>
 	<string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
 	<string name="returned">Returned</string>
-	<string name="start_delivery_text">Are you sure you want to start Delivery?</string>
-	<string name="delivery_id">Delivery Id</string>
-	<string name="deliver">Deliver</string>
+	<string name="start_delivery_text">क्या आप सुनिश्चित है वितरण स्टार्ट करने के लिए ?</string>
+	<string name="delivery_id">डिलीवरी आइडी</string>
+	<string name="deliver">पहुंचाना</string>
 	<string name="Return">Return</string>
+	<string name="delivery">Delivery</string>
+	<string name="delivery_cancelled">Delivery Cancelled</string>
 
 
 	<string-array name="CountryCodes" >
