--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -495,6 +495,8 @@
     <string name="delivery_id">Delivery Id</string>
     <string name="deliver">Deliver</string>
     <string name="Return">Return</string>
+    <string name="delivery">Delivery</string>
+    <string name="delivery_cancelled">Delivery Cancelled</string>
 
 
     <string-array name="CountryCodes" >
