--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -501,7 +501,10 @@
     <string name="give_missed_call_dialog_text">আমাক এটা মিচ কল দিয়ক আৰু আমি আপোনাৰ পৰিচয় নিচ্চিত কৰিম ।</string>
     <string name="give_misscall_to_verify">নিচ্চিত কৰাৰ বাবে মিচ কল দিয়ক ।</string>
     <string name="please_press_here">অনুগ্ৰহ কৰি ইয়াত টিপক ।</string>
-
+    <string name="accepted">Accepted</string>
+    <string name="in_ride">In Ride</string>
+    <string name="arrive_at_pickup_location">Arrive at pickup location</string>
+    <string name="make_delivery">Make Delivery</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
