--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -498,7 +498,10 @@
     <string name="give_missed_call_dialog_text">અમને તમે મિસ્સ કોલ કરો અને અમે તમારી ઓળખ ની ચકાસણી કરીશું</string>
     <string name="give_misscall_to_verify">અમને મિસ્સ કોલ આપો અને અમે તમારી ઓળખ ચકાસું</string>
     <string name="please_press_here">કૃપા કરીને અહીં દબાવો</string>
-
+    <string name="accepted">Accepted</string>
+    <string name="in_ride">In Ride</string>
+    <string name="arrive_at_pickup_location">Arrive at pickup location</string>
+    <string name="make_delivery">Make Delivery</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
