--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -502,7 +502,10 @@
     <string name="give_missed_call_dialog_text">ଆମକୁ ଗୋଟେ ମିସକଲ ଦିଅନ୍ତୁ ଅମେ ଅପଣଂକ ପରିଚୟ ଜାନ୍ଚ କରିବୁ</string>
     <string name="give_misscall_to_verify">ଜାଂଚ୍ ପାଇଁ ଆମକୁ ମିସ୍-କଲ୍ ଦିଅନ୍ତୁ</string>
     <string name="please_press_here">ଦୟାକରି ଏହିଠାରେ ଟିପନ୍ତୁ.</string>
-
+    <string name="accepted">Accepted</string>
+    <string name="in_ride">In Ride</string>
+    <string name="arrive_at_pickup_location">Arrive at pickup location</string>
+    <string name="make_delivery">Make Delivery</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
