feature_dodo: language strings added to all, before beta 237

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -502,6 +502,7 @@
     <string name="in_ride">In Ride</string>
     <string name="arrive_at_pickup_location">Arrive at pickup location</string>
     <string name="make_delivery">Make Delivery</string>
+    <string name="delivery_completed">Delivery Completed</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
