feature_dodo: multiple language strings added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -464,48 +464,50 @@
     <string name="data_effective_format">*Data effective from </string>
     <string name="ride_complete">যাএা সমাপ্ত হল ।</string>
     <string name="no_not_verified">Phone Number not verified</string>
-    <string name="return_reasons">Reasons of Return</string>
-    <string name="collected">Collected</string>
-    <string name="Returned">Returned</string>
-    <string name="please_confirm_cash_taken">Please confirm you have taken cash</string>
-    <string name="confirm">Confirm</string>
-    <string name="start_delivery">Start Delivery</string>
-    <string name="deliveries">Deliveries</string>
-    <string name="pending">Pending</string>
-    <string name="cancelled">Cancelled</string>
-    <string name="current">Current</string>
-    <string name="to_no_colon">To</string>
-    <string name="address">Address</string>
-    <string name="get_directions">Get Directions</string>
-    <string name="delivered">Delivered</string>
-    <string name="delivery_on">Delivery ON</string>
-    <string name="delivery_is_over">Delivery is Over</string>
-    <string name="orders_delivered">Orders Delivered</string>
-    <string name="orders_returned">Orders Returned</string>
-    <string name="rate_your_vendor">Rate Your Vendor</string>
-    <string name="view_orders">View Orders</string>
-    <string name="delivery_numbers">No. of Delivery</string>
-    <string name="approx">(Approx)</string>
-    <string name="start_the_ride">Start the ride</string>
-    <string name="deliver_order_number">Deliver order no. %s</string>
-    <string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
-    <string name="returned">Returned</string>
-    <string name="start_delivery_text">Are you sure you want to start Delivery?</string>
-    <string name="delivery_id">Delivery Id</string>
-    <string name="deliver">Deliver</string>
-    <string name="Return">Return</string>
-    <string name="delivery">Delivery</string>
-    <string name="delivery_cancelled">Delivery Cancelled</string>
+    <string name="return_reasons">ওভতি অহাৰ কাৰণ </string>
+    <string name="collected">সংগ্ৰহ</string>
+    <string name="Returned">ওভতিল</string>
+    <string name="please_confirm_cash_taken">অনুগ্ৰহ কৰি নিচ্চিত কৰক যে আপোনি নগদ পইছা লৈছে ।</string>
+    <string name="confirm">নিচ্চিত কৰক</string>
+    <string name="start_delivery">ডেলিভাৰি  আৰম্ভ কৰক</string>
+    <string name="deliveries">ডেলিভাৰি</string>
+    <string name="pending">পেন্দিং</string>
+
+    <string name="current">চলিত</string>
+    <string name="to_no_colon">কৰ লৈকে</string>
+    <string name="get_directions">নিৰ্দেশন পাওঁক</string>
+    <string name="orders_delivered">অদাৰ্ৰ ডেলিভাৰি হৈ গল</string>
+    <string name="orders_returned">অদাৰ্ৰ ওভতালে</string>
+    <string name="rate_your_vendor">আপোনাৰ দোকানক ৰেতিং দিয়ক</string>
+    <string name="view_orders">ডেলিভাৰি খিনি চাওঁক</string>
+    <string name="delivery_numbers">ডেলিভাৰিৰ সংখ্যা</string>
+    <string name="approx">(প্ৰায়)</string>
+    <string name="start_delivery_text">আপোনি ডেলিভাৰি আৰম্ভ কৰিব খোজে নে ?</string>
+
+    <string name="deliver">ডেলিভাৰ</string>
+    <string name="Return">ওভতিল</string>
+    <string name="delivery">ডেলিভাৰি </string>
     <string name="resend_OTP">অ.টি.পি আকৌ পঠাওঁক</string>
-    <string name="miss_call_otp">Give a Miss Call</string>
     <string name="give_missed_call_dialog_text">আমাক এটা মিচ কল দিয়ক আৰু আমি আপোনাৰ পৰিচয় নিচ্চিত কৰিম ।</string>
     <string name="give_misscall_to_verify">নিচ্চিত কৰাৰ বাবে মিচ কল দিয়ক ।</string>
     <string name="please_press_here">অনুগ্ৰহ কৰি ইয়াত টিপক ।</string>
-    <string name="accepted">Accepted</string>
-    <string name="in_ride">In Ride</string>
-    <string name="arrive_at_pickup_location">Arrive at pickup location</string>
-    <string name="make_delivery">Make Delivery</string>
+    <string name="accepted">স্বীকৃত</string>
+    <string name="in_ride">যাত্রা চলি আছে ।</string>
+    <string name="arrive_at_pickup_location">পিকআপ লকেচনত আহি পালে</string>
+    <string name="make_delivery">ডেলিভাৰি  কৰক</string>
     <string name="delivery_completed">Delivery Completed</string>
+    <string name="start_the_ride">Start the ride</string>
+    <string name="deliver_order_number">Deliver order no. %s</string>
+    <string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
+    <string name="returned">ওভতিল</string>
+    <string name="delivered">Delivered</string>
+    <string name="delivery_on">Delivery ON</string>
+    <string name="delivery_is_over">Delivery is Over</string>
+    <string name="address">Address</string>
+    <string name="cancelled">Cancelled</string>
+    <string name="delivery_id">ডেলিভাৰি আ ই দি</string>
+    <string name="miss_call_otp">Give a Miss Call</string>
+    <string name="delivery_cancelled">Delivery Cancelled</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
