--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -458,55 +458,60 @@
     <string name="share">പങ്കിടുക</string>
     <string name="phone_no_cnt_be_empty">ഫോൺ നമ്പർ  ശൂന്യമായിടാൻ  കഴിയില്ല</string>
     <string name="no_language_to_select">Language Option Not Available</string>
-    <string name="amnt_credited">Amount Credited</string>
     <string name="enter_some_amount">ദയവായി ചില തുക നൽകുക</string>
     <string name="enter_less_amount">ദയവായി കുറവ് തുക എന്റർ ചെയ്യുക</string>
     <string name="enter_valid_amount">ദയവായി സാധുവായ തുക നൽകുക</string>
     <string name="JUGNOO">JUGNOO</string>
     <string name="ride_complete">റൈഡ് പൂർത്തിയായി</string>
     <string name="no_not_verified">Phone Number not verified</string>
-    <string name="return_reasons">Reasons of Return</string>
-    <string name="collected">Collected</string>
-    <string name="Returned">Returned</string>
-    <string name="please_confirm_cash_taken">Please confirm you have taken cash</string>
-    <string name="confirm">Confirm</string>
-    <string name="start_delivery">Start Delivery</string>
-    <string name="deliveries">Deliveries</string>
-    <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
-    <string name="current">Current</string>
     <string name="to_no_colon">To</string>
     <string name="address">Address</string>
-    <string name="get_directions">Get Directions</string>
     <string name="delivered">Delivered</string>
     <string name="delivery_on">Delivery ON</string>
     <string name="delivery_is_over">Delivery is Over</string>
-    <string name="orders_delivered">Orders Delivered</string>
-    <string name="orders_returned">Orders Returned</string>
-    <string name="rate_your_vendor">Rate Your Vendor</string>
-    <string name="view_orders">View Orders</string>
-    <string name="delivery_numbers">No. of Delivery</string>
-    <string name="approx">(Approx)</string>
     <string name="start_the_ride">Start the ride</string>
     <string name="deliver_order_number">Deliver order no. %s</string>
     <string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
-    <string name="returned">Returned</string>
-    <string name="start_delivery_text">Are you sure you want to start Delivery?</string>
     <string name="delivery_id">Delivery Id</string>
-    <string name="deliver">Deliver</string>
-    <string name="Return">Return</string>
-    <string name="delivery">Delivery</string>
     <string name="delivery_cancelled">Delivery Cancelled</string>
-    <string name="accepted">Accepted</string>
-    <string name="in_ride">In Ride</string>
-    <string name="arrive_at_pickup_location">Arrive at pickup location</string>
-    <string name="make_delivery">Make Delivery</string>
-    <string name="resend_OTP">O.T.P. വീണ്ടും അയക്കാൻ</string>
     <string name="miss_call_otp">Give a Miss Call</string>
-    <string name="give_missed_call_dialog_text">നിങ്ങൾ ഞങ്ങൾക്ക് ഒരു മിസ്ഡ് കോൾ നൽകിയാൽ  നിങ്ങളുടെ ഐഡൻറിറ്റി ഞങ്ങൾ പരിശോധിക്കാം</string>
-    <string name="give_misscall_to_verify">സ്ഥിരീകരിക്കുന്നതിന് മിസ്സ്‌കാൾ ചെയ്യുക</string>
-    <string name="please_press_here">ഇവിടെ അമർത്തുക</string>
     <string name="delivery_completed">Delivery Completed</string>
+
+
+    <string name="give_missed_call_dialog_text">നിങ്ങൾ ഞങ്ങൾക്ക് ഒരു  ഒരു മിസ്ഡ് കോൾ നൽകിയാൽ ഞങ്ങൾ നിങ്ങളുടെ  ഐഡൻറിറ്റി പരിശോധിക്കുന്നതായിരിക്കും </string>
+    <string name="give_misscall_to_verify">സ്ഥിരീകരിക്കുന്നതിന് മിസ്സ്കാൾ ചെയ്യുക</string>
+    <string name="please_press_here">ഇവിടെ അമർത്തുക  </string>
+    <string name="resend_OTP">O.T.P വീണ്ടും അയയ്ക്കുക</string>
+
+    <string name="return_reasons">തിരികേയ്കുള്ള കാരണം</string>
+    <string name="Returned">മടക്കം</string>
+    <string name="collected">ശേഖരിച്ചു</string>
+    <string name="accepted">സ്വീകരിച്ചു</string>
+    <string name="in_ride">റൈഡിൽ  </string>
+    <string name="arrive_at_pickup_location">പിക്കപ്പ് ലൊക്കേഷനിൽ എത്തി</string>
+    <string name="make_delivery">ഡെലിവറി ചെയ്യുക </string>
+
+    <string name="please_confirm_cash_taken">നിങ്ങക്കു പണം ലഭിച്ചു എന്നു  സ്ഥിരീകരിക്കുക</string>
+    <string name="confirm">സ്ഥിരീകരിക്കുക</string>
+    <string name="start_delivery">ഡെലിവറി ആരംഭിക്കുക</string>
+    <string name="deliveries">ഡെലിവറികൾ </string>
+    <string name="pending">ബാക്കിയുള്ളവ</string>
+    <string name="current">നിലവിൽ</string>
+    <string name="get_directions">ദിശ ലഭിക്കുന്നതിനു</string>
+    <string name="delivery">ഡെലിവറി</string>
+    <string name="orders_delivered">ഡെലിവറി ചെയ്ത ഓർഡറുകൾ</string>
+    <string name="orders_returned">മടക്കിനൽകിയ ഓർഡറുകൾ </string>
+    <string name="rate_your_vendor">നിങ്ങളുടെ വെണ്ടറെ  റേറ്റുചെയ്യുക</string>
+    <string name="view_orders">ഓർഡറുകൾ കാണുക</string>
+    <string name="delivery_numbers">ഡെലിവറികളുടെ എണ്ണം </string>
+    <string name="approx">(ഏകദേശം)</string>
+    <string name="returned">മടക്കിയവ</string>
+    <string name="start_delivery_text">നിങ്ങൾക്ക് ഉറപ്പാണോ ഡെലിവറി ആരംഭിക്കണം എന്ന് ? </string>
+    <string name="deliver">എത്തിക്കണം</string>
+    <string name="Return">മടക്കം</string>
+    <string name="amnt_credited">ക്രെഡിറ്റ്‌ ചെയ്ത തുക</string>
+
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
