--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -539,52 +539,56 @@
     <string name="enter_some_amount">தயவு செய்து கட்டணத்தை உள்ளிடவும்</string>
     <string name="enter_less_amount">தயவு செய்து குறைந்த  கட்டணத்தை உள்ளிடவும்</string>
     <string name="enter_valid_amount">செல்லுபடியாகும் கட்டணத்தை உள்ளிடவும்</string>
-    <string name="amnt_credited">Amount Credited</string>
     <string name="JUGNOO">JUGNOO</string>
     <string name="ride_complete">சவாரி வெற்றிகரமாக முடிந்தது </string>
     <string name="no_not_verified">Phone Number not verified</string>
-    <string name="return_reasons">Reasons of Return</string>
-    <string name="collected">Collected</string>
-    <string name="Returned">Returned</string>
-    <string name="please_confirm_cash_taken">Please confirm you have taken cash</string>
-    <string name="confirm">Confirm</string>
-    <string name="start_delivery">Start Delivery</string>
-    <string name="deliveries">Deliveries</string>
-    <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
-    <string name="current">Current</string>
     <string name="to_no_colon">To</string>
     <string name="address">Address</string>
-    <string name="get_directions">Get Directions</string>
     <string name="delivered">Delivered</string>
     <string name="delivery_on">Delivery ON</string>
     <string name="delivery_is_over">Delivery is Over</string>
-    <string name="orders_delivered">Orders Delivered</string>
-    <string name="orders_returned">Orders Returned</string>
-    <string name="rate_your_vendor">Rate Your Vendor</string>
-    <string name="view_orders">View Orders</string>
-    <string name="delivery_numbers">No. of Delivery</string>
-    <string name="approx">(Approx)</string>
     <string name="start_the_ride">Start the ride</string>
     <string name="deliver_order_number">Deliver order no. %s</string>
     <string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
-    <string name="returned">Returned</string>
-    <string name="start_delivery_text">Are you sure you want to start Delivery?</string>
-    <string name="delivery_id">Delivery Id</string>
-    <string name="deliver">Deliver</string>
-    <string name="Return">Return</string>
-    <string name="delivery">Delivery</string>
     <string name="delivery_cancelled">Delivery Cancelled</string>
     <string name="resend_OTP">ஒ டி பீ -ஐ மீண்டும் அனுப்பவும்</string>
     <string name="miss_call_otp">Give a Miss Call</string>
     <string name="give_missed_call_dialog_text">எங்களுக்கு மிஸ்ட் கால் கொடுங்கள் நாங்கள் உங்கள் அடையாளத்தைச் சரிபார்கிறோம்</string>
     <string name="give_misscall_to_verify">சரிபார்க்க மிஸ்ட் கால் கொடுக்கவும்.</string>
     <string name="please_press_here">தயவு செய்து இங்கே அழுத்தவும்</string>
-    <string name="accepted">Accepted</string>
-    <string name="in_ride">In Ride</string>
-    <string name="arrive_at_pickup_location">Arrive at pickup location</string>
-    <string name="make_delivery">Make Delivery</string>
     <string name="delivery_completed">Delivery Completed</string>
+
+
+
+    <string name="return_reasons"> திரும்புவதற்கான காரணம் </string>
+    <string name="Returned">திரும்ப </string>
+    <string name="collected">சேகரிக்கப்பட்ட</string>
+    <string name="accepted"> ஏற்றுக்கொள்ளப்பட்ட </string>
+    <string name="in_ride">சவாரியில் </string>
+    <string name="arrive_at_pickup_location">பிக் அப் இடத்திற்கு வந்து அடைய </string>
+    <string name="make_delivery">ஒப்படைக்க </string>
+
+    <string name="please_confirm_cash_taken">பணம் பெற்றதை தயவுசெய்து உறுதிபடுத்தவும்</string>
+    <string name="confirm">உறுதி</string>
+    <string name="start_delivery">விநியோகம் தொடங்க</string>
+    <string name="deliveries">விநியோகங்கள்</string>
+    <string name="pending">நிலுவையில்</string>
+    <string name="current">தற்போதைய</string>
+    <string name="get_directions">திசைகள் பெற</string>
+    <string name="delivery">ஒப்படைக்க</string>
+    <string name="orders_delivered">ஆடர்கள் ஒப்படைக்க</string>
+    <string name="orders_returned">ஆடர்கள் திரும்ப</string>
+    <string name="rate_your_vendor">உங்கள் விற்பனையாளரை மதிப்பிடவும்</string>
+    <string name="view_orders">ஆடர்கள் பார்க்க</string>
+    <string name="delivery_numbers">விநியோகங்கள் எண்ணிக்கை</string>
+    <string name="approx">சுமார்</string>
+    <string name="returned">திரும்ப</string>
+    <string name="start_delivery_text">விநியோகம் துடங்குவதில் உறுதியாக இருக்கீர்களா</string>
+    <string name="deliver">ஒப்படைக்க</string>
+    <string name="Return">திரும்ப</string>
+    <string name="amnt_credited">வந்த தொகை</string>
+    <string name="delivery_id">விநியோக ஐடி</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
