--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -461,52 +461,57 @@
     <string name="enter_some_amount">ଦୟାକରି କିଛି ପଇସା ଲେଖନ୍ତୁ</string>
     <string name="enter_less_amount">ଦୟାକରି କମ ପଇସା ଲେଖନ୍ତୁ </string>
     <string name="enter_valid_amount">ଦୟାକରି କିଛି ବୈଧ ରାସୀ ଜମା କରନ୍ତୁ </string>
-    <string name="amnt_credited">Amount Credited</string>
     <string name="JUGNOO">JUGNOO</string>
     <string name="ride_complete">ରାଇଡ୍ ଶେଷ ହୋଇସାରିଛି</string>
     <string name="no_not_verified">Phone Number not verified</string>
-    <string name="return_reasons">Reasons of Return</string>
-    <string name="collected">Collected</string>
-    <string name="Returned">Returned</string>
-    <string name="please_confirm_cash_taken">Please confirm you have taken cash</string>
-    <string name="confirm">Confirm</string>
-    <string name="start_delivery">Start Delivery</string>
-    <string name="deliveries">Deliveries</string>
-    <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
-    <string name="current">Current</string>
     <string name="to_no_colon">To</string>
     <string name="address">Address</string>
-    <string name="get_directions">Get Directions</string>
     <string name="delivered">Delivered</string>
     <string name="delivery_on">Delivery ON</string>
     <string name="delivery_is_over">Delivery is Over</string>
-    <string name="orders_delivered">Orders Delivered</string>
-    <string name="orders_returned">Orders Returned</string>
-    <string name="rate_your_vendor">Rate Your Vendor</string>
-    <string name="view_orders">View Orders</string>
-    <string name="delivery_numbers">No. of Delivery</string>
-    <string name="approx">(Approx)</string>
     <string name="start_the_ride">Start the ride</string>
     <string name="deliver_order_number">Deliver order no. %s</string>
     <string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
-    <string name="returned">Returned</string>
-    <string name="start_delivery_text">Are you sure you want to start Delivery?</string>
-    <string name="delivery_id">Delivery Id</string>
-    <string name="deliver">Deliver</string>
-    <string name="Return">Return</string>
-    <string name="delivery">Delivery</string>
     <string name="delivery_cancelled">Delivery Cancelled</string>
     <string name="resend_OTP">ଓଟିପି ଆଉଥରେ ପଠାଯିବ.</string>
     <string name="miss_call_otp">Give a Miss Call</string>
     <string name="give_missed_call_dialog_text">ଆମକୁ ଗୋଟେ ମିସକଲ ଦିଅନ୍ତୁ ଅମେ ଅପଣଂକ ପରିଚୟ ଜାନ୍ଚ କରିବୁ</string>
     <string name="give_misscall_to_verify">ଜାଂଚ୍ ପାଇଁ ଆମକୁ ମିସ୍-କଲ୍ ଦିଅନ୍ତୁ</string>
     <string name="please_press_here">ଦୟାକରି ଏହିଠାରେ ଟିପନ୍ତୁ.</string>
-    <string name="accepted">Accepted</string>
-    <string name="in_ride">In Ride</string>
-    <string name="arrive_at_pickup_location">Arrive at pickup location</string>
-    <string name="make_delivery">Make Delivery</string>
     <string name="delivery_completed">Delivery Completed</string>
+
+
+
+    <string name="return_reasons">ଫେରସ୍ତ ର କାରଣ</string>
+    <string name="Returned">ଫେରସ୍ତ</string>
+    <string name="collected">ସଂଗ୍ରହ</string>
+    <string name="accepted">ଗ୍ରହଣ</string>
+    <string name="in_ride">ରାଇଡ୍ ରେ ଅଛନ୍ତି</string>
+    <string name="arrive_at_pickup_location">ପିକ୍-ଅପ୍ ଲୋକେସନ୍ ରେ ପହଂଚି ସାରିଛନ୍ତି</string>
+    <string name="make_delivery">ଡେଲିଭରି କରନ୍ତୁ</string>
+
+    <string name="please_confirm_cash_taken">ଦୟାକରି ନଗଦ୍ ରାଶି ନେଇଛନ୍ତି ବୋଲି ନିଶ୍ଚିତ କରନ୍ତୁ.</string>
+    <string name="confirm">ନିଶ୍ଚିତ</string>
+    <string name="start_delivery">ବିତରଣ ଆରମ୍ଭ</string>
+    <string name="deliveries">ବିତରଣ ଗୁଡିକ.</string>
+    <string name="pending">ରହିଯାଇଛି</string>
+    <string name="current">ବର୍ତମାନ୍</string>
+    <string name="get_directions">ମାର୍ଗ ଦେଖିବା ପାଇଂ.</string>
+    <string name="delivery">ଡେଲିଭେରି.</string>
+    <string name="orders_delivered">ଅର୍ଡର୍ ବିତରଣ ହୋଇଯାଇଛି.</string>
+    <string name="orders_returned">ଅର୍ଡର୍ ଫେରେଇ ଦିଆଯାଇଛି.</string>
+    <string name="rate_your_vendor">ନିଜ ବିକ୍ରେତା ନ୍କୁ ରେଟିଂ ଦିଅଂନ୍ତୁ.</string>
+    <string name="view_orders">ଅର୍ଡର୍ ଗୁଡିକ ଦେଖିବା ପାଇଂ.</string>
+    <string name="delivery_numbers">ବିତରଣ କ୍ରମ</string>
+    <string name="approx">ଅନୁମାନିକ.</string>
+    <string name="returned">ଫେରେଇ ଦିଆଯାଇଥିବା.</string>
+    <string name="start_delivery_text">ଆପଣ ନିଶ୍ଚିତ ଅଛନ୍ତି କି ବିତରଣ ଆରମ୍ଭ କରିବା ପାଇଂ.</string>
+    <string name="deliver">ବିତରଣ</string>
+    <string name="Return">ଫେରାଇବା.</string>
+    <string name="amnt_credited">ରାଶି ଆସିଯାଇଛି.</string>
+    <string name="delivery_id">ଡେଲିଭେରି ଆଇଡି.</string>
+
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
